# bop-modeling-data

./: .sqlfluff  README.md  blank  hello.py  pyproject.toml
app/: test_app.py
bop_dbt/: dbt_project.yml
bop_dbt/macros/: logger.sql  recode__company_code.sql
bop_dbt/macros/keys/: generate_aiv_key.sql  generate_policy_key.sql  generate_quote_key.sql
bop_dbt/macros/recode/: recode__sas_date_format.sql  recode__text_ind.sql  recode__to_int.sql
bop_dbt/macros/utils/: create_temp_table.sql  dbt_hashmap.sql  to_padded_str.sql
bop_dbt/models/: sources.yml
bop_dbt/models/stg/: stg__cf_exposureview.sql  stg__gl_exposureview.sql  test.sql
bop_dbt/models/stg/eclas_subtables/: stg__eclas_subs__eclas_cfxml.sql  stg__eclas_subs__eclas_covered_item.sql  stg__eclas_subs__eclas_event_data.sql  stg__eclas_subs__eclas_form_detail_sc.sql  stg__eclas_subs__eclas_info_sc.sql  stg__eclas_subs__eclas_insurance_agreement.sql  stg__eclas_subs__eclas_insurance_agreement_coverage.sql  stg__eclas_subs__eclas_insurance_agreement_coverage_actual_role.sql  (+2 more)
down/: atpublic-5.0-py3-none-any.whl  down.py  snowflake-1.0.2-py3-none-any.whl  snowflake_connector_python-3.12.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  snowflake_core-1.0.2-py3-none-any.whl  snowflake_legacy-1.0.0-py3-none-any.whl  snowflake_snowpark_python-1.26.0-py3-none-any.whl  up.py
sf_bop_data/: copy_from_server.py  loading.py  session.py  staging_parquet_files.py
sf_bop_data/load/: mosum.py  mosum.sql
sf_bop_data/load/sas_server/: __init__.py  server_auth.py
sf_bop_data/load/screngn/: sql_database_pipeline.py
sf_bop_data/load/sqlserver/: requirements.txt  sql_database_pipeline.py
sql/: packages.sql
sql/definitions/eda_app/: app.py  data.sql  data_model.py
sql/definitions/functions/: generate_policy_key.sql  generate_quote_key.sql
sql/definitions/tables/: cf_aiv.sql  logging.sql  telemetry.sql
(+2 files in other folders)
